# range-regex

./: Cargo.toml
bench/: Cargo.toml
bench/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile.rs  match.rs
src/: digits.rs  fill_by_nines.rs  fill_by_zeros.rs  lib.rs
